# namada-masp-indexer

./: .env.template  .gitignore  Cargo.toml  Justfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  result-block.json  result-block_results.json  rust-nightly-version  rust-toolchain.toml  rustfmt.toml  signature  swagger.yml
.github/workflow/: build.yml  deploy.yml
.github/workflows/: build.yml  deploy.yml
block-index/: Cargo.toml  Dockerfile
block-index/src/: config.rs  main.rs
chain/: Cargo.toml  Dockerfile  run.sh
chain/src/: config.rs  main.rs  result.rs
chain/src/entity/: chain_state.rs  commitment_tree.rs  mod.rs  tx_note_map.rs  tx_notes_index.rs  witness_map.rs
chain/src/services/: cometbft.rs  db.rs  masp.rs  mod.rs  rpc.rs
orm/: Cargo.toml
orm/migrations/2024-04-17-115642_witness/: down.sql  up.sql
orm/migrations/2024-04-17-120650_chain_state/: down.sql  up.sql
orm/migrations/2024-04-17-131547_commitment_tree/: down.sql  up.sql
orm/migrations/2024-04-17-131702_notes_map/: down.sql  up.sql
orm/migrations/2024-04-17-141415_tx/: down.sql  up.sql
orm/migrations/2024-07-23-171457_block_index/: down.sql  up.sql
orm/migrations/2025-03-06-081320_delete_invalid_commitment_trees/: up.sql
orm/migrations/2025-03-10-142053_masp_fee_payment/: down.sql  up.sql
orm/migrations/2025-03-11-150254_delete_masp_data_up_to_phase3/: up.sql
orm/migrations/2025-04-04-134858_reset_masp_data_to_migrate_events/: up.sql
orm/migrations/2025-04-24-083201_targeted_migrations/: down.sql  up.sql
orm/src/: block_index.rs  chain_state.rs  lib.rs  notes_index.rs  notes_map.rs  schema.rs  tree.rs  tx.rs  witness.rs
shared/: Cargo.toml
shared/src/: block.rs  block_results.rs  client.rs  commitment_tree.rs  epoch.rs  error.rs  exit_handle.rs  extracted_masp_tx.rs  header.rs  height.rs  id.rs  indexed_tx.rs  lib.rs  retry.rs  throughput.rs  transaction.rs  transactional.rs  tx_index.rs  tx_result.rs
webserver/: Cargo.toml  Dockerfile
webserver/src/: app.rs  appstate.rs  config.rs  main.rs
webserver/src/dto/: indices.rs  mod.rs  notes_index.rs  notes_map.rs  tree.rs  txs.rs  witness.rs
webserver/src/error/: api.rs  mod.rs  namada_state.rs  notes_index.rs  notes_map.rs  tree.rs  tx.rs  witness_map.rs
webserver/src/handler/: mod.rs  namada_state.rs  notes_index.rs  notes_map.rs  tree.rs  tx.rs  witness_map.rs
webserver/src/repository/: namada_state.rs  notes_index.rs  notes_map.rs  tree.rs  tx.rs  witness_map.rs
webserver/src/response/: mod.rs  namada_state.rs  notes_index.rs  notes_map.rs  tree.rs  tx.rs  witness_map.rs
webserver/src/service/: mod.rs  namada_state.rs  notes_index.rs  notes_map.rs  tree.rs  tx.rs  witness_map.rs
webserver/src/state/: common.rs
webserver/src/utils/: mod.rs
