[workspace]
resolver = "2"
members = ["block-index", "chain", "shared", "orm", "webserver"]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = [ "tower-log", "http2" ] }
axum-macros = "0.3.8"
axum-trace-id = "0.1.0"
bincode = "1.3.3"
clap = { version = "4.4.2", features = [ "derive", "env" ] }
clap-verbosity-flag = "2.1.1"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.2.1", features = [ "postgres", "uuid", "serde_json", "chrono" ] }
diesel_migrations = { version = "2.2.0", default-features = false, features = [ "postgres" ] }
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.4.0"
namada_core = { git = "https://github.com/anoma/namada", tag = "v1.0.0" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v1.0.0" }
namada_tx = { git = "https://github.com/anoma/namada", tag = "v1.0.0" }
orm = { path = "orm" }
serde = { version = "1.0.138", features = [ "derive" ] }
serde_json = "1.0"
shared = { path = "shared" }
tendermint = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"] }
thiserror = "1.0.56"
tokio = { version = "1.0", features = [ "full" ] }
tokio-retry = "0.3"
tower = { version = "0.4", features = [ "util", "timeout", "load-shed", "limit", "buffer" ] }
tower-http = { version = "0.4.4", features = [ "compression-full", "limit", "trace", "cors" ] }
tracing = "0.1"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
validator = { version = "0.16.0", features = ["derive"] }
xorf = { version = "0.11.0", features = ["serde"]}
tryhard = { version = "0.5.1" }
