[workspace]
resolver = "2"
members = ["block-index", "chain", "shared", "orm", "webserver"]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2024"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "1.1.2"

[workspace.dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = [ "tower-log", "http2" ] }
axum-macros = "0.3.8"
axum-trace-id = "0.1.0"
bincode = "1.3.3"
clap = { version = "4.4.2", features = [ "derive", "env" ] }
clap-verbosity-flag = "2.1.1"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.2.1", features = [ "postgres", "uuid", "serde_json", "chrono" ] }
diesel_migrations = { version = "2.2.0", default-features = false, features = [ "postgres" ] }
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.4.0"
namada_sdk = { git = "https://github.com/anoma/namada", branch = "grarco/fix-masp-events", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", branch = "grarco/fix-masp-events" }
namada_core = { git = "https://github.com/anoma/namada", branch = "grarco/fix-masp-events" }
orm = { path = "orm" }
rayon = "1.10.0"
serde = { version = "1.0.138", features = [ "derive" ] }
serde_json = "1.0"
shared = { path = "shared" }
tendermint = "0.40.1"
tendermint-config = "0.40.1"
tendermint-rpc = {version = "0.40.1", features = ["http-client"]}
thiserror = "1.0.56"
tokio = { version = "1.0", features = [ "full" ] }
tokio-retry = "0.3"
tower = { version = "0.4", features = [ "util", "timeout", "load-shed", "limit", "buffer" ] }
tower-http = { version = "0.4.4", features = [ "compression-full", "limit", "trace", "cors" ] }
tracing = "0.1"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tryhard = { version = "0.5.1" }
validator = { version = "0.16.0", features = ["derive"] }
vergen = "8.0.0"
xorf = { version = "0.11.0", features = ["serde"]}
