[package]
name = "block-index"
description = "Namada masp indexer block index builder."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "block-index-builder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap-verbosity-flag.workspace = true
clap.workspace = true 
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
orm.workspace = true
shared.workspace = true
tokio.workspace = true 
tracing-subscriber.workspace = true
tracing.workspace = true
xorf.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
