[package]
name = "chain"
description = "Namada masp indexer crawler."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "chain"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap-verbosity-flag.workspace = true
clap.workspace = true 
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
futures.workspace = true
namada_core.workspace = true
namada_sdk.workspace = true
orm.workspace = true
rayon.workspace = true
shared.workspace = true
tendermint-rpc.workspace = true
tendermint.workspace = true
tokio-retry.workspace = true
tokio.workspace = true 
tracing-subscriber.workspace = true
tracing.workspace = true
tryhard.workspace = true
itertools.workspace = true
serde_json.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
