[package]
name = "orm"
description = "Namada indexer orm."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
name = "orm"
path = "src/lib.rs"

[dependencies]
diesel.workspace = true
serde.workspace = true
