[package]
name = "shared"
description = "Namada IT shared data."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
namada_core.workspace = true
namada_sdk.workspace = true
namada_tx.workspace = true
rand.workspace = true
serde.workspace = true
tendermint-rpc.workspace = true
tendermint.workspace = true
tokio.workspace = true
tracing.workspace = true
