[package]
name = "webserver"
description = "Namada masp indexer API."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "webserver"
path = "src/main.rs"

[features]
production = []

[dependencies]
axum.workspace = true 
tokio.workspace = true 
tower.workspace = true 
tower-http.workspace = true 
tower-layer.workspace = true
tracing.workspace = true
namada_core.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true 
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
deadpool-diesel.workspace = true
validator.workspace = true
axum-trace-id.workspace = true
axum-macros.workspace = true
orm.workspace = true
diesel.workspace = true
derive_builder.workspace = true
shared.workspace = true
chrono.workspace = true
reqwest.workspace = true
subtle-encoding.workspace = true
futures.workspace = true
async-trait.workspace = true
itertools.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
