[package]
name = "webserver"
description = "Namada masp indexer API."
resolver = "2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "webserver"
path = "src/main.rs"

[features]
production = []

[dependencies]
anyhow.workspace = true
axum-macros.workspace = true
axum-trace-id.workspace = true
axum.workspace = true 
clap.workspace = true 
deadpool-diesel.workspace = true
diesel.workspace = true
futures.workspace = true
itertools.workspace = true
lazy_static.workspace = true
namada_core.workspace = true
orm.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true 
tower-http.workspace = true 
tower.workspace = true 
tracing-subscriber.workspace = true
tracing.workspace = true
validator.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
